--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: required
 services: docker
 
 before_install:
+  - docker login -u sugar777 -p 7a6aec11-f634-4460-a436-2b399f4e3094
   - docker-compose up --build -d
 
 script:
