--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,20 @@ sudo: required
 services: docker
 
 before_install:
-  - docker login -u sugar777 -p 7a6aec11-f634-4460-a436-2b399f4e3094
+  - docker login -u "$DOCKER_HUB_NAME" -p "$DOCKER_HUB_TOKEN"
   - docker-compose up --build -d
+  - docker login -u "$HEROKU_USERNAME" -p "$HEROKU_API_KEY" registry.heroku.com
 
 script:
   - docker-compose exec --env 'RAILS_ENV=test' web rails db:create
   - docker-compose exec --env 'RAILS_ENV=test' web rails db:migrate
   - docker-compose exec --env 'RAILS_ENV=test' web rails test
+
+deploy:
+  provider: script
+  script:
+    docker build -t registry.heroku.com/$HEROKU_APP_NAME/web -f Dockerfile.prod .;
+    docker push registry.heroku.com/$HEROKU_APP_NAME/web;
+    heroku run --app $HEROKU_APP_NAME rails db:migrate;
+  on:
+    branch: master
